# ER_mods

./: CMakeLists.txt  README.md
src/paramadjuster/: CMakeLists.txt  README.md  dllmain.cpp  global.h  sigscanner.cpp  sigscanner.h
src/paramadjuster/params/: luabindings.cpp  luabindings.h  param.cpp  param.h  param_to_cpp.py  paramdefs.h  pointers.cpp  pointers.h  wstring.cpp  wstring.h
src/paramadjuster/params/bindings/: ActionButtonParam.cpp  AssetGeometryParam.cpp  AssetMaterialSfxParam.cpp  AssetModelSfxParam.cpp  AtkParam.cpp  AttackElementCorrectParam.cpp  BaseChrSelectMenuParam.cpp  BehaviorParam.cpp  BonfireWarpParam.cpp  BonfireWarpSubCategoryParam.cpp  BonfireWarpTabParam.cpp  BuddyParam.cpp  BuddyStoneParam.cpp  BudgetParam.cpp  BulletCreateLimitParam.cpp  BulletParam.cpp  CalcCorrectGraph.cpp  CameraFadeParam.cpp  CeremonyParam.cpp  CharMakeMenuListItemParam.cpp  CharMakeMenuTopParam.cpp  CharaInitParam.cpp  ChrActivateConditionParam.cpp  ChrEquipModelParam.cpp  ChrModelParam.cpp  ClearCountCorrectParam.cpp  CommonSystemParam.cpp  CoolTimeParam.cpp  CutSceneTextureLoadParam.cpp  CutsceneGparamTimeParam.cpp  CutsceneGparamWeatherParam.cpp  CutsceneMapIdParam.cpp  CutsceneTimezoneConvertParam.cpp  CutsceneWeatherOverrideGparamIdConvertParam.cpp  DecalParam.cpp  DefaultKeyAssign.cpp  DirectionCameraParam.cpp  EnemyCommonParam.cpp  EnvObjLotParam.cpp  EquipMtrlSetParam.cpp  (+106 more)
src/paramadjuster/params/defs/: ActionButtonParam.h  AssetGeometryParam.h  AssetModelSfxParam.h  (+143 more)
src/paramadjuster/scripts/: artofwars.lua.example  droprate.lua.example  gems.lua.example
(+4 files in other folders)
